Fixed element spacing

--- a/css/styles.less
+++ b/css/styles.less
@@ -40,11 +40,11 @@ h2 {
     font-weight: 800;
     line-height: 1;
     text-transform: uppercase;
-    margin: 2vw 0;
 
     &.section-title {
         border-left: 8px solid @primary-color;
         padding-left: 13px;
+        margin: 1vw 0;        
     }
 }
 
@@ -158,12 +158,13 @@ h2 {
     ul {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
         list-style: none;
         padding-left: 0;
         margin: 0;
 
         li {
-            margin: 2vw 2vw 0 0;
+            margin: 1vw 1vw 0 0;
             a {
                 display: flex;
                 justify-content: center;
@@ -183,6 +184,9 @@ h2 {
             }
             &:last-child {
                 margin-right: 0;
+            }    
+            &:first-child {
+                margin-left: 0;
             }    
             &.ico-facebook {
                 svg {
